--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	
-	<title>Health india</title>
+	<title>Health Italy</title>
 
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
 	
